--- a/home.html
+++ b/home.html
@@ -8,16 +8,34 @@
 </head>
 <body>
     <header>
+        <div id="lo1">
+        <img src = "img/fh.jpg">
+        <h1></strong>GoBurguer</strong></h1>
+        </div>
         <nav>
             <ul>
                 <li><strong>Página Inicial</strong></li>
-                <li><a href="https://yann000.github.io/pedido/cardapio.html">Fazer meu Pedido</a></li>
-                <li><a href="https://yann000.github.io/conttato/contato.html">Contato</a></li>
+                <li><a href="https://yann000.github.io/menu/cardapio.html">Fazer meu Pedido</a></li>
+                <li><a href="https://yann000.github.io/conttatto/contato.html ">Contato</a></li>
             </ul>
         </nav>
-    
-
     </header>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
     <div id="col1">
         <h4>Venha experimentar os melhores hamburgueres de São Paulo.</h4>
         <img src="img/ha.jpg">
